# bio2byte-peptidebuilder

./: Makefile  pyproject.toml  pytest.ini
examples/: evaluation.py  example.ipynb  simpleExample.py
src/bio2byte/PeptideBuilder/: Geometry.py  PeptideBuilder.py  __init__.py
